# macdiet

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  now-task.md  review.md  rules.md  仕様書.md
docs/: report.md  snapshots.md  system-data.md  ui.md
src/: engine.rs  exit.rs  lib.rs  main.rs
src/actions/: mod.rs
src/cli/: interactive.rs  mod.rs
src/config/: mod.rs
src/core/: action.rs  evidence.rs  finding.rs  mod.rs  report.rs  risk.rs
src/logs/: mod.rs
src/platform/: macos.rs  mod.rs
src/rules/: mod.rs
src/scan/: mod.rs
src/snapshots/: mod.rs
src/tui/: mod.rs
src/ui/: mod.rs
tests/: cli_safety.rs  config_precedence.rs  doctor_timeout_budget.rs  env_precedence.rs  exit_codes.rs  fix_r2_preview.rs  report_json_golden.rs  report_markdown.rs  snapshots_unobserved.rs
tests/golden/: report.json
