[package]
name = "macdiet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
indicatif = "0.17.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
time = { version = "0.3.37", features = ["formatting", "macros"] }
walkdir = "2.5.0"
wait-timeout = "0.2.0"
globset = "0.4.15"
toml = "0.8.20"
clap_complete = "4.5.46"
ratatui = "0.26.3"
crossterm = "0.27.0"
unicode-width = "0.2.2"
libc = "0.2.169"

[dev-dependencies]
serde_json = "1.0.138"
